Archive2/fe/a4103a0c8fda8b/output
main.cpp:8:1: error: expected unqualified-id
for(int i = 0; i < pf.size();)
^
1 error generated.
